// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contacts english version renders correctly 1`] = `
<div
  className="sc-AxjAm hKhHEk"
>
  <ul
    className="sc-AxirZ gXlCIn"
  >
    <li
      className="sc-AxiKw xmlnn"
    >
      <span>
        Email
      </span>
       - 
      <a
        href="mailto:michael@danilov.me"
      >
        michael@danilov.me
      </a>
    </li>
    <li
      className="sc-AxiKw xmlnn"
    >
      <span>
        Telegram
      </span>
       - 
      <a
        href="https://t.me/MichaelDanilov"
      >
        @MichaelDanilov
      </a>
    </li>
    <li
      className="sc-AxiKw xmlnn"
    >
      <span>
        Twitter
      </span>
       - 
      <a
        href="https://twitter.com/MonkAlbino"
      >
        @MonkAlbino
      </a>
    </li>
    <li
      className="sc-AxiKw xmlnn"
    >
      <a
        href="https://fb.me/michaeldanilov"
      >
        Facebook
      </a>
    </li>
  </ul>
</div>
`;

exports[`Contacts russian version renders correctly 1`] = `
<div
  className="sc-AxjAm hKhHEk"
>
  <ul
    className="sc-AxirZ gXlCIn"
  >
    <li
      className="sc-AxiKw xmlnn"
    >
      <span>
        Электронная почта
      </span>
       - 
      <a
        href="mailto:michael@danilov.me"
      >
        michael@danilov.me
      </a>
    </li>
    <li
      className="sc-AxiKw xmlnn"
    >
      <a
        href="https://vk.me/michael.danilov"
      >
        ВКонтакте
      </a>
    </li>
    <li
      className="sc-AxiKw xmlnn"
    >
      <span>
        Twitter
      </span>
       - 
      <a
        href="https://twitter.com/MonkAlbino"
      >
        @MonkAlbino
      </a>
    </li>
    <li
      className="sc-AxiKw xmlnn"
    >
      <a
        href="https://fb.me/michaeldanilov"
      >
        Facebook
      </a>
    </li>
  </ul>
</div>
`;
